# python-project-lvl2

./: .gitignore  .pyproject.toml.swp  README.md  makefile  pyproject.toml
.github/workflows/: github-lint.yml  github-test.yml
gendiff/scripts/: .gendiff_start.py.swp  __init__.py  gendiff_start.py  pars_gendiff.py  test.py
gendiff/tests/: .test_new.py.swp  file2.json  test.py  test_result.py
gendiff/tests/fixtures/: expected_result.txt  file2.json
tests/: test_json.py  test_yml.py
