[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = "Compare two configuration files and shows a difference."
authors = ["akishev-m <mikhail.akishev@gmail.com>"]
repository = "https://github.com/akishev-m/python-project-lvl2"
packages = [
  { include = "gendiff" },
]
classifiers = [
    "Private :: Do Not Upload"
]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff_start:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
